--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -9,21 +9,22 @@
     </form> 
     <br><br>
     <div class="text-center">
-        <button class="backHome btn">Home</button>
+        <button class="backHome btn password-home-btn">Home</button>
     </div>
 </div>
 
-
-<img id="pagename" class="char-select-head col-md-12 hidden" src="../public/assets/images/headers/Game-Page.png"/>
+<div id="gamePage" class="hidden container text-center">
+    <img class="game-head col-md-12" src="../public/assets/images/headers/Game-Page.png"/>
+    <div>
+        <img class="boss-head col-md-12" src="../public/assets/images/headers/bosses-to-defeat.png"/>
+        <img id ="startbossone" class="hidden img img-responsive tada animated" src="../public/assets/images/bosses/Thugs.png"/>
+        <img id ="startbosstwo" class="hidden img img-responsive tada animated" src="../public/assets/images/bosses/Ninja-Three.png"/>
+        <img id ="startbossthree" class="hidden img img-responsivetada animated" src="../public/assets/images/bosses/Robo-bot.png"/>
+    </div>
+</div>
 <br>
-<button id ="startbossone" class = "hidden">Thug</button>
-<button id= "startbosstwo" class = "hidden">Gunslinger</button>
-<button id= "startbossthree" class = "hidden">Giant Robot</button>
-
-
-<br>
-<div id = "bossonescreen" class = "bossdiv hidden">
-
+<div id = "bossonescreen" class = "bossdiv text-center hidden">
+    <img class="thugs-head col-md-12" src="../public/assets/images/headers/Thugs-Head.png"/>
     <h2 class = "charnamedisplay">Player</h2>
     <h4 class = "usernamedisplay">Player</h4>
     <br>
