got font change to work

--- a/public/assets/css/btmbrawler_style.css
+++ b/public/assets/css/btmbrawler_style.css
@@ -324,18 +324,18 @@ transition: all .5s ease-in-out;
 /* Custom Fonts */
 .hero-font {
     color: #396eb6;
-    box-shadow: #f3ea21 
+    box-shadow: #f3ea21;
 }
 .sidekick-font {
     color: #502f83;
-    box-shadow: #f3ea21
+    box-shadow: #f3ea21;
 }
 .shadowtaken-font {
     color: #2e2750;
-    box-shadow: #f3ea21
+    box-shadow: #f3ea21;
 }
 .mothman-font {
     color: #9c2e21;
-    box-shadow: #f3ea21
+    box-shadow: #f3ea21;
 }
 
