--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -25,23 +25,24 @@
 <br>
 <div id = "bossonescreen" class = "bossdiv text-center hidden">
     <img class="thugs-head col-md-12" src="../public/assets/images/headers/Thugs-Head.png"/>
-    <h2 class = "charnamedisplay">Player</h2>
-    <h4 class = "usernamedisplay">Player</h4>
-    <br>
-    <button id= "playerButtonb1">Break the Thug</button>
-    <br>
-    <h6 class = "playerattack">attack</h6>
-    <h6 class = "playerdefense">defense</h6>
-    <h6 class = "playerintellect">intellect</h6>
-    <h4 class = "playerattackstat">pending action</h4>
-
-    <h2 class = "bossnamedisplay">Boss</h2>
-    <br>
-    <h6 class = "bossattack">attack</h6>
-    <h6 class = "bossdefense">defense</h6>
-    <h6 class = "bossintellect">intellect</h6>
-    <h4 class = "bossattackstat">pending action</h4>
-
+    <div class="colorMeRad">
+        <h2 class = "charnamedisplay">Player</h2>
+        <h4 class = "usernamedisplay">Player</h4>
+        <br>
+        <button id= "playerButtonb1">Break the Thug</button>
+        <br>
+        <h6 class = "playerattack">attack</h6>
+        <h6 class = "playerdefense">defense</h6>
+        <h6 class = "playerintellect">intellect</h6>
+        <h4 class = "playerattackstat">pending action</h4>
+        
+        <h2 class = "bossnamedisplay">Boss</h2>
+        <br>
+        <h6 class = "bossattack">attack</h6>
+        <h6 class = "bossdefense">defense</h6>
+        <h6 class = "bossintellect">intellect</h6>
+        <h4 class = "bossattackstat">pending action</h4>
+    </div>
 </div>
 
 <br>
