--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -22,26 +22,35 @@
         <img id ="startbossthree" class="hidden img img-responsivetada animated" src="../public/assets/images/bosses/Robo-bot.png"/>
     </div>
 </div>
-<br>
 <div id = "bossonescreen" class = "bossdiv text-center hidden">
     <img class="thugs-head col-md-12" src="../public/assets/images/headers/Thugs-Head.png"/>
-    <h2 class = "charnamedisplay">Player</h2>
-    <h4 class = "usernamedisplay">Player</h4>
-    <br>
-    <button id= "playerButtonb1">Break the Thug</button>
-    <br>
-    <h6 class = "playerattack">attack</h6>
-    <h6 class = "playerdefense">defense</h6>
-    <h6 class = "playerintellect">intellect</h6>
-    <h4 class = "playerattackstat">pending action</h4>
-
-    <h2 class = "bossnamedisplay">Boss</h2>
-    <br>
-    <h6 class = "bossattack">attack</h6>
-    <h6 class = "bossdefense">defense</h6>
-    <h6 class = "bossintellect">intellect</h6>
-    <h4 class = "bossattackstat">pending action</h4>
-
+    <div class="row">
+        <div class="col-md-6">
+            <h2 class = "charnamedisplay">Player</h2>
+            <h4 class = "usernamedisplay">Player</h4>
+            <h6 class = "playerattack">attack</h6>
+            <h6 class = "playerdefense">defense</h6>
+            <h6 class = "playerintellect">intellect</h6>
+            <h4 class = "playerattackstat">pending action</h4>
+            <br>
+            <button id= "playerButtonb1">Break the Thug</button>
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="col-md-6">
+            <h2 class = "bossnamedisplay boss1-text">Boss</h2>
+            <img class="thugs-head col-md-12" src="../public/assets/images/bosses/Thugs-Fight.png"/>
+            <br>
+            <div class="boss1-box">
+                <h6 class = "bossattack boss1-text">attack</h6>
+                <h6 class = "bossdefense boss1-text">defense</h6>
+                <h6 class = "bossintellect boss1-text">intellect</h6>
+                <h4 class = "bossattackstat boss1-text">pending action</h4>
+            </div>
+            <br>
+        </div>
+    </div>
 </div>
 
 <br>
@@ -58,12 +67,11 @@
     <h4 class = "playerattackstat">pending action</h4>
 
     <h2 class = "bossnamedisplay">Boss</h2>
-    <br>
-    <h6 class = "bossattack">attack</h6>
-    <h6 class = "bossdefense">defense</h6>
-    <h6 class = "bossintellect">intellect</h6>
-    <h4 class = "bossattackstat">pending action</h4>
-
+    <br><br>
+        <h6 class = "bossattack">attack</h6>
+        <h6 class = "bossdefense">defense</h6>
+        <h6 class = "bossintellect">intellect</h6>
+        <h4 class = "bossattackstat">pending action</h4>
 </div>
 
 <br>
