added pictures instead of charname

--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -26,7 +26,7 @@
 <div id = "bossonescreen" class = "bossdiv text-center hidden">
     <img class="thugs-head col-md-12" src="../public/assets/images/headers/Thugs-Head.png"/>
     <div class="colorMeRad">
-        <h2 class = "charnamedisplay">Player</h2>
+        <img id ="charnamedisplay" class="img img-responsive" />
         <h4 class = "usernamedisplay">Player</h4>
         <br>
         <button id= "playerButtonb1">Break the Thug</button>
