--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -25,8 +25,8 @@
 <div id = "bossonescreen" class = "bossdiv text-center hidden">
     <img class="thugs-head col-md-12" src="../public/assets/images/headers/Thugs-Head.png"/>
     <div class="row">
-        <div class="col-md-6">
-            <h2 class = "charnamedisplay">Player</h2>
+        <div class="col-md-6 colorMeRad">
+            <img id ="charnamedisplay" class="img img-responsive" />
             <h4 class = "usernamedisplay">Player</h4>
             <h6 class = "playerattack">attack</h6>
             <h6 class = "playerdefense">defense</h6>
