--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -32,6 +32,7 @@
             <h6 class = "playerdefense">defense</h6>
             <h6 class = "playerintellect">intellect</h6>
             <h4 class = "playerattackstat">pending action</h4>
+            <h5 class = "itemsEquip"></h5>
             <br>
             <button id= "playerButtonb1">Break the Thug</button>
             <br>
