fixed the next fight issue

--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -100,6 +100,7 @@
 </div> 
 <div id = "winlosediv" class = "hidden">
     <h1 id = "winlosetext"></h1>
+    <button id="backtogamepage">Battle</button>
 </div>   
 </section>
 </div>
