--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -234,7 +234,7 @@
 <div id = "userInfo" class = "hidden">
     <img class="char-select-head col-md-12" src="../public/assets/images/headers/Continue.png"/>
     <div class = "container">
-        <table class = "table continue-table pressStart">
+        <table class = "table continue-table pressStart col-md-12">
             <thead>
                 <tr>
                 <th scope = "col">#</th>
