--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -18,8 +18,8 @@
     <div>
         <img class="boss-head col-md-12" src="../public/assets/images/headers/bosses-to-defeat.png"/>
         <img id ="startbossone" class="hidden img img-responsive tada animated" src="../public/assets/images/fight/bosses/Thugs.png"/>
-        <img id ="startbosstwo" class="hidden img img-responsive tada animated" src="../public/assets/images/bosses/Ninja-Three.png"/>
-        <img id ="startbossthree" class="hidden img img-responsivetada animated" src="../public/assets/images/bosses/Robo-bot.png"/>
+        <img id ="startbosstwo" class="hidden img img-responsive tada animated" src="../public/assets/images/fight/bosses/Ninja-Three.png"/>
+        <img id ="startbossthree" class="hidden img img-responsive tada animated" src="../public/assets/images/fight/bosses/Robo-bot.png"/>
     </div>
 </div>
 <div id = "bossonescreen" class = "bossdiv text-center hidden">
@@ -46,7 +46,7 @@
             <h3 class = "bossnamedisplay boss1-text">Boss</h3>
             <img class="col-md-12 boss-image" src="../public/assets/images/fight/bosses/Thugs-Fight.png"/>
             <br>
-            <div class="boss1-box">
+            <div class="boss-box">
                 <h6 class = "bossattack boss1-text">attack</h6>
                 <h6 class = "bossdefense boss1-text">defense</h6>
                 <h6 class = "bossintellect boss1-text">intellect</h6>
@@ -58,51 +58,81 @@
 </div>
 
 <br>
-<div id = "bosstwoscreen" class = "bossdiv hidden">
-
-    <h2 class = "charnamedisplay">Player</h2>
-    <h4 class = "usernamedisplay">Player</h4>
-    <br>
-    <button id= "playerButtonb2">Takedown the Gunslinger</button>
-    <br>
-    <h6 class = "playerattack">attack</h6>
-    <h6 class = "playerdefense">defense</h6>
-    <h6 class = "playerintellect">intellect</h6>
-    <h4 class = "playerattackstat">pending action</h4>
-
-    <h2 class = "bossnamedisplay">Boss</h2>
-    <br><br>
-        <h6 class = "bossattack">attack</h6>
-        <h6 class = "bossdefense">defense</h6>
-        <h6 class = "bossintellect">intellect</h6>
-        <h4 class = "bossattackstat">pending action</h4>
+<div id = "bosstwoscreen" class = "bossdiv text-center hidden">
+    <img class="col-md-12" src="../public/assets/images/headers/Ninja-Three-Head.png"/>
+    <div class="row">
+        <div class="col-md-6 colorMeRad">
+            <h3 class = "usernamedisplay">Player</h3>
+                <img id ="charnamedisplay" class="img img-responsive col-md-12" />
+                <div class="player1-box">
+                    <h6 class = "playerattack">attack</h6>
+                    <h6 class = "playerdefense">defense</h6>
+                    <h6 class = "playerintellect">intellect</h6>
+                    <h6 class = "itemsEquip"></h6>
+                    <h4 class = "playerattackstat">pending action</h4>
+            </div>
+            
+            <br>
+            <button id= "playerButtonb2">Brie the Ninja Three</button>
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="col-md-6">
+            <h3 class = "bossnamedisplay boss2-text">Boss</h3>
+            <img class="col-md-12 boss-image" src="../public/assets/images/fight/bosses/Ninja-Three-Fight.png"/>
+            <br>
+            <div class="boss-box">
+                <h6 class = "bossattack boss2-text">attack</h6>
+                <h6 class = "bossdefense boss2-text">defense</h6>
+                <h6 class = "bossintellect boss2-text">intellect</h6>
+                <h4 class = "bossattackstat boss2-text">pending action</h4>
+            </div>
+            <br>
+        </div>
+    </div>
 </div>
 
-<br>
-<div id = "bossthreescreen" class = "bossdiv hidden">
-    <h2 class = "charnamedisplay">Player</h2>
-    <h4 class = "usernamedisplay">Player</h4>
-    <br>
-    <button id= "playerButtonb3">Strike the Robot</button>
-    <br>
-    <h6 class = "playerattack">attack</h6>
-    <h6 class = "playerdefense">defense</h6>
-    <h6 class = "playerintellect">intellect</h6>
-    <h4 class = "playerattackstat">pending action</h4>
-
+<div id = "bossthreescreen" class = "bossdiv text-center hidden">
+    <img class="thugs-head col-md-12" src="../public/assets/images/headers/robo-bot-Head.png"/>
+    <div class="row">
+        <div class="col-md-6 colorMeRad">
+            <h3 class = "usernamedisplay">Player</h3>
+                <img id ="charnamedisplay" class="img img-responsive col-md-12" />
+                <div class="player1-box">
+                <h6 class = "playerattack">attack</h6>
+                <h6 class = "playerdefense">defense</h6>
+                <h6 class = "playerintellect">intellect</h6>
+                <h6 class = "itemsEquip"></h6>
+                <h4 class = "playerattackstat">pending action</h4>
+            </div>
+            
+            <br>
+            <button id= "playerButtonb3">Break the Thug</button>
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="col-md-6">
+            <h3 class = "bossnamedisplay boss1-text">Boss</h3>
+            <img class="col-md-12 boss-image" src="../public/assets/images/fight/bosses/Robo-Bot-Fight.png"/>
+            <br>
+            <div class="boss-box">
+                <h6 class = "bossattack boss1-text">attack</h6>
+                <h6 class = "bossdefense boss1-text">defense</h6>
+                <h6 class = "bossintellect boss1-text">intellect</h6>
+                <h4 class = "bossattackstat boss1-text">pending action</h4>
+            </div>
+            <br>
+        </div>
+    </div>
+</div>
     
-    <h2 class = "bossnamedisplay">Boss</h2>
-    <br>
-    <h6 class = "bossattack">attack</h6>
-    <h6 class = "bossdefense">defense</h6>
-    <h6 class = "bossintellect">intellect</h6>
-    <h4 class = "bossattackstat">pending action</h4>
-</div> 
-<div id = "winlosediv" class = "hidden">
-    <h1 id = "winlosetext"></h1>
-    <button id="backtogamepage">Battle</button>
+<div id = "winlosediv" class = "text-center hidden">
+    <img class="thugs-head col-md-12" src="../public/assets/images/headers/boss-defeat.png"/>
+    <h1 id = "winlosetext" class="pressStart"></h1>
+    <button id="backtogamepage" class="btn">Back to Battle</button>
 </div>   
 </section>
 </div>
-
 
