--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -233,8 +233,8 @@
 
 <div id = "userInfo" class = "hidden">
     <img class="char-select-head col-md-12" src="../public/assets/images/headers/Continue.png"/>
-    <div class = "container">
-        <table class = "table continue-table pressStart col-md-12">
+    <div class = "table-responsive">
+        <table class = "table continue-table">
             <thead>
                 <tr>
                 <th scope = "col">#</th>
@@ -266,10 +266,11 @@
             {{/each}}
             </tbody>
         </table>
-        <br><br>
+        <br>
         <div class="text-center">
             <button class="backHome btn">Home</button>
         </div>
+        <br>
     </div>
 
     {{!-- <div class="footer">
