--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -27,7 +27,7 @@
     <div class="row">
         <div class="col-md-6 colorMeRad">
             <h3 class = "usernamedisplay">Player</h3>
-                <img id ="charnamedisplay" class="img img-responsive col-md-12" />
+                <img class="charnamedisplay img img-responsive col-md-12" />
                 <div class="player1-box">
                 <h6 class = "playerattack">attack</h6>
                 <h6 class = "playerdefense">defense</h6>
@@ -63,7 +63,7 @@
     <div class="row">
         <div class="col-md-6 colorMeRad">
             <h3 class = "usernamedisplay">Player</h3>
-                <img id ="charnamedisplay" class="img img-responsive col-md-12" />
+                <img class="charnamedisplay img img-responsive col-md-12" />
                 <div class="player1-box">
                     <h6 class = "playerattack">attack</h6>
                     <h6 class = "playerdefense">defense</h6>
@@ -98,7 +98,7 @@
     <div class="row">
         <div class="col-md-6 colorMeRad">
             <h3 class = "usernamedisplay">Player</h3>
-                <img id ="charnamedisplay" class="img img-responsive col-md-12" />
+                <img class="charnamedisplay img img-responsive col-md-12" />
                 <div class="player1-box">
                 <h6 class = "playerattack">attack</h6>
                 <h6 class = "playerdefense">defense</h6>
