changed the defeat boss image on player death

--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -129,7 +129,7 @@
 </div>
     
 <div id = "winlosediv" class = "text-center hidden">
-    <img class="thugs-head col-md-12" src="../public/assets/images/headers/boss-defeat.png"/>
+    <img class="thugs-head col-md-12" id = "defeatedBossImg" src="../public/assets/images/headers/boss-defeat.png"/>
     <h1 id = "winlosetext" class="pressStart"></h1>
     <button id="backtogamepage" class="btn">Back to Battle</button>
 </div>   
