--- a/public/assets/css/btmbrawler_style.css
+++ b/public/assets/css/btmbrawler_style.css
@@ -46,6 +46,10 @@ body {
     margin: 8% 0;
 }
 
+.backChar {
+    margin: 3%;
+}
+
 #submitCredentials, .backHome, #backToUser, #submitUser, #itemScreen, #charCreation, #pickItem, #modal-close, #submitPassword, #playerButtonb1, #playerButtonb2, #playerButtonb3, #backtogamepage {
     font-family: 'Press Start 2P', cursive;
     margin: auto;
@@ -123,6 +127,22 @@ body {
     100% { transform: scale(1); }
 }
 
+.spin:hover {
+    animation: coin-rotate 2s both infinite;
+}
+
+@keyframes coin-rotate {
+    0 {
+      transform: rotateY(0);
+    }
+    50% {
+      transform: rotateY(180deg);
+    }
+    100% {
+      transform: rotateY(0deg);
+    }
+  }
+
 .main-screen {
 	background-image: url("../images/Hero-and-Sidekick.png"), url("../images/Front-Buildings.png"), url("../images/Roto-Bot.png"), url("../images/Rear-Buildings.png"), url("../images/Clouds-and-Moon.png");
     background-repeat: no-repeat, no-repeat, repeat-x;
@@ -162,7 +182,7 @@ body {
     margin-top: 180px;
 }
 
-#createUser, #userInfo, #passwordform, #gamePage, #bossonescreen, #bosstwoscreen, #bossthreescreen, #winlosediv {
+#createUser, #userInfo, #passwordform, #gamePage, #bossonescreen, #bosstwoscreen, #bossthreescreen, #winlosediv, #wrongPassDIV {
     background: rgba(0, 0, 0, 0.8);
     width: 95%;
     margin: auto;
@@ -199,10 +219,10 @@ body {
 }
 
 #itembuttons {
-    width: 20%;
+    width: 25%;
     border: 3px solid white;
     border-radius: 5px;
-    margin: 0 3%;
+    margin-bottom: 3%;
     transition: all 1s ease-in-out;
 }
 
@@ -322,7 +342,7 @@ body {
 }
 
 /* BOSS ONE */
-#bossonescreen {
+#bossonescreen, #bosstwoscreen, bossthreescreen {
     font-family: 'Press Start 2P', cursive;
     color: #396eb6;
     text-shadow: #1f3e60 2px 2px;
@@ -361,6 +381,11 @@ body {
     text-shadow: #1f3e60 2px 2px;
 }
 
+.boss3-text {
+    color: #3B53A3;
+    text-shadow: #1f3e60 2px 2px;
+}
+
 .boss-box {
     border: 3px solid #cc0000;
     border-radius: 5px;
@@ -382,4 +407,8 @@ body {
 .playerattackstat, .bossattackstat {
     color:white;
     text-shadow: #1f3e60 2px 2px;
+}
+
+.nin-three-head {
+    margin-bottom: 2%;
 }
