--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -23,7 +23,7 @@
     </div>
 </div>
 <div id = "bossonescreen" class = "bossdiv text-center hidden">
-    <img class="thugs-head col-md-12" src="../public/assets/images/headers/Thugs-Head.png"/>
+    <img class="col-md-12" src="../public/assets/images/headers/Thugs-Head.png"/>
     <div class="row">
         <div class="col-md-6 colorMeRad">
             <h3 class = "usernamedisplay">Player</h3>
@@ -57,9 +57,8 @@
     </div>
 </div>
 
-<br>
 <div id = "bosstwoscreen" class = "bossdiv text-center hidden">
-    <img class="col-md-12" src="../public/assets/images/headers/Ninja-Three-Head.png"/>
+    <img class="col-md-12 nin-three-head" src="../public/assets/images/headers/Ninja-Three-Head.png"/>
     <div class="row">
         <div class="col-md-6 colorMeRad">
             <h3 class = "usernamedisplay">Player</h3>
@@ -114,7 +113,7 @@
             <br>
         </div>
         <div class="col-md-6">
-            <h3 class = "bossnamedisplay boss1-text">Boss</h3>
+            <h3 class = "bossnamedisplay boss3-text">Boss</h3>
             <img class="col-md-12 boss-image" src="../public/assets/images/fight/bosses/Robo-Bot-Fight.png"/>
             <br>
             <div class="boss-box">
