--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,7 +19,7 @@
         <form class="create-form text-center">
             <span class="pressStart">Username: </span><textarea id="userNameInput" rows="1" cols="40"></textarea>
             </br>
-            <span class="pressStart">Password: </span><textarea id="passwordInput" rows="1" cols="40"></textarea>
+            <span class="pressStart">Favorite Color: </span><textarea id="passwordInput" rows="1" cols="40"></textarea>
             <br>
             <div class="backNext">
                 <button class="btn backHome">Back</button>
@@ -37,8 +37,7 @@
         <table class="item-table" align="center">
                 <tbody id="items"data-toggle="modal" data-target="#item-sel-modal" align="center"></tbody>
         </table>
-        
-        <div class="backNext text-center">
+        <div class="backChar text-center">
             <button id="charCreation" class="btn">Back To Character Creation</button>
             {{!-- <button id="submitUser" class="btn">Submit</button> --}}
         </div>
