wrongpassword screen change

--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -136,3 +136,20 @@
 </section>
 </div>
 
+<div id = "wrongPasswordContainer" class = "container">
+    <div id = "wrongPassword" class = "hidden">
+        <span class = "row">
+            <span class = "col-lg-12 text-center">
+                <img src="../public/assets/images/Roto-Bot.png" class = "img img-responsive" style = "width: 50%;, height: 50;">
+            </span>
+        </span>
+        <span class = "row">
+            <span class = "col-lg-12 text-center">
+                <h1>Wrong password idiot</h1>
+                <br><br>
+                <button><a href = "/gamepage">Wanna try that again?</a></button>
+            </span>
+        </span>
+    </div>
+</div>
+
