--- a/public/assets/css/btmbrawler_style.css
+++ b/public/assets/css/btmbrawler_style.css
@@ -132,16 +132,10 @@ body {
 }
 
 @keyframes coin-rotate {
-    0 {
-      transform: rotateY(0);
-    }
-    50% {
-      transform: rotateY(180deg);
-    }
-    100% {
-      transform: rotateY(0deg);
-    }
-  }
+    0 { transform: rotateY(0); }
+    50% { transform: rotateY(180deg); }
+    100% { transform: rotateY(0deg); }
+}
 
 .main-screen {
 	background-image: url("../images/Hero-and-Sidekick.png"), url("../images/Front-Buildings.png"), url("../images/Roto-Bot.png"), url("../images/Rear-Buildings.png"), url("../images/Clouds-and-Moon.png");
@@ -342,7 +336,7 @@ body {
 }
 
 /* BOSS ONE */
-#bossonescreen, #bosstwoscreen, bossthreescreen {
+#bossonescreen, #bosstwoscreen, #bossthreescreen {
     font-family: 'Press Start 2P', cursive;
     color: #396eb6;
     text-shadow: #1f3e60 2px 2px;
