--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -21,6 +21,7 @@
         <img id ="startbosstwo" class="hidden img img-responsive tada animated" src="../public/assets/images/fight/bosses/Ninja-Three.png"/>
         <img id ="startbossthree" class="hidden img img-responsive tada animated" src="../public/assets/images/fight/bosses/Robo-bot.png"/>
     </div>
+    <button class="backHome btn">Home</button>
 </div>
 <div id = "bossonescreen" class = "bossdiv text-center hidden">
     <img class="col-md-12" src="../public/assets/images/headers/Thugs-Head.png"/>
@@ -37,7 +38,7 @@
             </div>
             
             <br>
-            <button id= "playerButtonb1">Break the Thug</button>
+            <button id= "playerButtonb1" class="btn">Break the Thug</button>
             <br>
             <br>
             <br>
@@ -55,6 +56,7 @@
             <br>
         </div>
     </div>
+    <button class="ditchFight btn">BAIL!</button>
 </div>
 
 <div id = "bosstwoscreen" class = "bossdiv text-center hidden">
@@ -90,6 +92,7 @@
             <br>
         </div>
     </div>
+    <button class="ditchFight btn">AW HELL NA!</button>
 </div>
 
 <div id = "bossthreescreen" class = "bossdiv text-center hidden">
@@ -125,6 +128,7 @@
             <br>
         </div>
     </div>
+    <button class="ditchFight btn">BYEEES!</button>
 </div>
     
 <div id = "winlosediv" class = "text-center hidden">
