--- a/public/assets/css/btmbrawler_style.css
+++ b/public/assets/css/btmbrawler_style.css
@@ -353,7 +353,7 @@ body {
 }
 .sidekick-font {
     color: #502f83;
-    text-shadow: #f3ea21 2px 2px;
+    text-shadow: #d9d9d9 2px 2px;
 }
 .shadowtaken-font {
     color: #2e2750;
