--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -128,7 +128,7 @@
             <br>
         </div>
     </div>
-    <button class="ditchFight btn">BYEEES!</button>
+    <button class="ditchFight btn">BYEE!</button>
 </div>
     
 <div id = "winlosediv" class = "text-center hidden">
