--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,7 +19,7 @@
         <form class="create-form text-center">
             <span class="pressStart">Username: </span><textarea id="userNameInput" rows="1" cols="40"></textarea>
             </br>
-            <span class="pressStart">Favorite Color: </span><textarea id="passwordInput" rows="1" cols="40"></textarea>
+            <span class="pressStart">Passwordr: </span><textarea id="passwordInput" rows="1" cols="40"></textarea>
             <br>
             <div class="backNext">
                 <button class="btn backHome">Back</button>
