2nd coat of wax

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
 
 <section>
     <div id = "welcomeScreen">
-        <img class="homepage-header col-md-12" src="../public/assets/images/Header.png"/>
+        <img class="homepage-header col-md-12 flipInY animated" src="../public/assets/images/Header.png"/>
         <br>
         <button id = "newGame" class="btn pulse">New Game</button>
         <br>
