--- a/views/gamepage.handlebars
+++ b/views/gamepage.handlebars
@@ -110,7 +110,7 @@
             </div>
             
             <br>
-            <button id= "playerButtonb3">Break the Thug</button>
+            <button id= "playerButtonb3">Install that program</button>
             <br>
             <br>
             <br>
